# ML-API

./: .flake8  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  api.py  bot.py  db.json  deploy-ml-api.sh  docker-compose.prod.yaml  docker-compose.yaml  env.example  generate-env.sh  groups.txt  parse_data.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  test.yaml
notebooks/: research.ipynb
src/: __init__.py
src/database/: images.py  pets.py
src/llm/: solver.py
src/models/: __init__.py  attachment.py  pet.py  photo.py  vk_post.py
src/parser/: __init__.py  parse_group.py
src/services/: __init__.py  tgbot.py
