[tool.poetry]
name = "petmatch-ml-api"
version = "0.1.0"
description = "ML API for PetMatch project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pandas = "^2.1.3"
python-decouple = "^3.8"
requests = "^2.31.0"
dacite = "^1.8.1"
gigachat = "^0.1.17"
pyTelegramBotAPI = "^4.14.0"
tqdm = "^4.66.1"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127
target-version = ['py311']
extend-exclude = '''
/(
    notebooks/
)/
'''

[tool.isort]
profile = "black"
line_length = 127
skip_glob = ["notebooks/*"]
known_first_party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
